--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -13,9 +13,8 @@ html
     link(rel='stylesheet', type='text/css', href='css/theme.css')
   body
     #nav
-    #main-container.container.bg-white
-      main
-        #root
+    #root-container.container
+      #root
 
     footer.footer
       .container
