--- a/src/css/style.less
+++ b/src/css/style.less
@@ -5,12 +5,16 @@ body {
 	font-size:          16px;
 }
 
+nav{
+	background-color:rgb(39, 39, 39);
+	color:white;
+}
 
 .navbar {
 	top:            0;
 	left:           0;
 	width:          100%;
-	box-shadow:     0px 2px #d8d8d8;
+	box-shadow:     0px 2px #575656;
 	position:       fixed;
 	z-index:        3;
 	letter-spacing: .8px;
