--- a/src/css/style.less
+++ b/src/css/style.less
@@ -8,24 +8,22 @@ body {
 nav{
 	background-color:rgb(39, 39, 39);
 	color:white;
+	
 }
 
 .navbar {
 	top:            0;
 	left:           0;
 	width:          100%;
-	box-shadow:     0px 2px #575656;
 	position:       fixed;
 	z-index:        3;
 	letter-spacing: .8px;
 
-	.active {
-		a {
-			border-color: rgb(52,163,218);
-			border-style:   solid;
-			border-width:   0px 0px 4px 0px;
-			padding-bottom: 5px;
-		}
+	.active .nav-item-container{
+		border-color: rgb(52,163,218);
+		border-style:   solid;
+		border-width:   0px 0px 4px 0px;
+		padding-bottom: 5px;
 	}
 }
 
@@ -42,15 +40,15 @@ nav{
 }
 
 .footer {
-	color: white;
+	color:        white;
 	padding-bottom: 20px;
 	padding-top:    20px;
 }
 
 .card {
 	background-color: #253c4e;
-	color: white;
-	margin-bottom: 15px;
+	color:            white;
+	margin-bottom:      15px;
 	ul {
 		margin-bottom: 0;
 	}
