--- a/src/css/style.less
+++ b/src/css/style.less
@@ -23,7 +23,7 @@ nav{
 		border-color: rgb(52,163,218);
 		border-style:   solid;
 		border-width:   0px 0px 4px 0px;
-		padding-bottom: 5px;
+		display:        inline-block;
 	}
 }
 
@@ -62,11 +62,13 @@ nav{
 }
 
 .navbar-toggler {
+	color:        rgb(253, 253, 253);
 	border-color: rgb(199, 198, 198);
 	border-radius:  5px;
 	border-style:   solid;
 	border-width:   1px;
-	padding-top:    7px;
+	padding-top:    5px;
+	padding-bottom: 4px;
 }
 
 .table{
