wip footer icons

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -42,7 +42,9 @@ nav{
 .footer {
 	color:        white;
 	padding-bottom: 20px;
-	padding-top:    20px;
+	span{
+		margin-right: 10px;
+	}
 }
 
 .card {
