--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -22,20 +22,20 @@ html
       .container
         .row
           .col-sm-12
-            span
+            a(href="")
               i.fas.fa-info-circle.fa-fw
               = ' '
-              a(href='', target="_blank") About
-            span |
-            span
+              span About
+            span.footer-divider |
+            a(href="")
               i.fab.fa-github.fa-fw
               = ' '
-              a(href='', target="_blank") GitHub
-            span |
-            span
+              span GitHub
+            span.footer-divider |
+            a(href="")
               i.fas.fa-envelope.fa-fw
               = ' '
-              a(href='', target="_blank") Contact
+              span Contact
     // Modal
     #contactModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalLabel', aria-hidden='true')
       .modal-dialog(role='document')
