Redisgn app look

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,12 +1,16 @@
 
 body {
-	background-color: #1d2e3f;
-	font-family: 		"Motiva Sans", Sans-serif;
-	font-size:          16px;
+	background-color:  #1d2e3f;
+	font-family: 		 "Motiva Sans", Sans-serif;
+	font-size:           16px;
+	background-image:    url("../asset/background.jpg");
+	background-repeat:   no-repeat;
+	background-position: center;
+	background-size:     cover;
 }
 
 nav{
-	background-color:rgb(39, 39, 39);
+	background-color: #253c4ec0;
 	color:white;
 	
 }
@@ -47,20 +51,21 @@ nav{
 .footer {
 	color:        white;
 	padding-bottom: 20px;
-
 	a {
 		margin: 0 10px;
-		cursor: pointer;
-		color: rgb(202, 200, 200);
+		color:rgb(202, 200, 200);
 	}
-
 }
 
 .card {
-	background-color: #253c4e;
+	background-color: #253c4e91;
 	color:            white;
 	padding-bottom:     0px;
 	margin-bottom:      18px;
+}
+
+.card-title {
+	margin-bottom: 20px;
 }
 
 .card-body {
