--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,6 +1,6 @@
 html
   head
-    title Cloud Resume
+    title Budget Calculator
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='shortcut icon', type='image/png', href='asset/favicon.png')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
