--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -22,17 +22,17 @@ html
       .container
         .row
           .col-sm-12
-            a(href="")
+            a(href="#")
               i.fas.fa-info-circle.fa-fw
               = ' '
               span About
             span.footer-divider |
-            a(href="")
+            a(href="https://github.com/huthanh89/budget" target="_blank")
               i.fab.fa-github.fa-fw
               = ' '
               span GitHub
             span.footer-divider |
-            a(href="")
+            a(href="#")
               i.fas.fa-envelope.fa-fw
               = ' '
               span Contact
