--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -22,17 +22,12 @@ html
       .container
         .row
           .col-sm-12
-            a(href="#")
-              i.fas.fa-info-circle.fa-fw
-              = ' '
-              span About
-            span.footer-divider |
             a(href="https://github.com/huthanh89/budget" target="_blank")
               i.fab.fa-github.fa-fw
               = ' '
               span GitHub
             span.footer-divider |
-            a(href="#")
+            a(href="#" data-toggle="modal" data-target="#contactModal")
               i.fas.fa-envelope.fa-fw
               = ' '
               span Contact
@@ -48,7 +43,12 @@ html
             .row
               .col-sm-12
                 p
-                  b.d-block sup
+                  span For any inquiries or questions:
+                  = ' '
+                p
+                  span Email: 
+                  b developertth@gmail.com
+
           .modal-footer
             button.btn.btn-secondary(type='button', data-dismiss='modal') Close
 
