--- a/src/css/style.less
+++ b/src/css/style.less
@@ -110,3 +110,12 @@ nav{
 	color:white;
 }
 
+#expense-form {
+	white-space: nowrap;
+}
+
+#entry-container {
+	max-height: 320px;
+	overflow-y: scroll;
+
+}
