Add budget review

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -116,6 +116,19 @@ nav{
 
 #entry-container {
 	max-height: 320px;
+	min-width:  340px;
 	overflow-y: scroll;
+}
 
+#summary-container {
+	.table {
+		margin-top: 32px;
+	}
+}
+
+#budget-container {
+	.table {
+		margin-top:    32px;
+		margin-bottom: 30px;
+	}
 }
