use auto scroll

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -117,7 +117,7 @@ nav{
 #entry-container {
 	max-height: 320px;
 	min-width:  340px;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 #summary-container {
