--- a/src/css/style.less
+++ b/src/css/style.less
@@ -83,6 +83,14 @@ nav{
 
 .card-title {
 	margin-bottom: 20px;
+	i {
+		margin-right: 5px;
+	}
+}
+
+.card-subtitle {
+	color: rgb(194, 194, 194);
+	padding-bottom: 10px;
 }
 
 .card-body {
@@ -108,6 +116,10 @@ nav{
 
 .table{
 	color:white;
+
+	th {
+		border-top: none;
+	}
 }
 
 #expense-form {
