--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -22,12 +22,13 @@ html
       .container
         .row
           .col-sm-12
-            a(href="https://github.com/huthanh89/budget" target="_blank")
-              i.fab.fa-github.fa-fw
+            a.text-muted
+              span 2018
               = ' '
-              span GitHub
-            span.footer-divider |
-            a(href="#" data-toggle="modal" data-target="#contactModal")
+              i.far.fa-copyright.fa-fw
+              = ' '
+              span DeveloperTTH
+            a.float-right(href="#" data-toggle="modal" data-target="#contactModal")
               i.fas.fa-envelope.fa-fw
               = ' '
               span Contact
