Fix android bugs.

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -75,7 +75,7 @@ nav{
 }
 
 .card {
-	background-color: #253c4e77;
+	background-color: rgba(0, 0, 0, 0.199);
 	color:            white;
 	padding-bottom:     0px;
 	margin-bottom:      18px;
