--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -53,4 +53,4 @@ html
           .modal-footer
             button.btn.btn-secondary(type='button', data-dismiss='modal') Close
 
-    script(src='js/bundle.js')
+    script(type='text/javascript' src='js/bundle.js')
