--- a/src/css/style.less
+++ b/src/css/style.less
@@ -54,9 +54,12 @@ nav{
 	}
 }
 
-.nav-tabs .nav-item {
-	&:hover{
-		color: rgb(189, 189, 189);
+.nav-tabs {
+	white-space: nowrap;
+	.nav-item {
+		&:hover{
+			color: rgb(189, 189, 189);
+		}
 	}
 }
 
