--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,7 +1,7 @@
 html
   head
     title Budget Calculator
-    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(charset="UTF-8", name='viewport', content='width=device-width, initial-scale=1')
     link(rel='shortcut icon', type='image/png', href='asset/favicon.png')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css', integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm', crossorigin='anonymous')
     link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.3.1/css/all.css', integrity='sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU', crossorigin='anonymous')
