--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -12,10 +12,17 @@ html(lang='en')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js', integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q', crossorigin='anonymous')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js', integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl', crossorigin='anonymous')
 
+    // budget ad 1
+    script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+    script.
+      (adsbygoogle = window.adsbygoogle || []).push({});
+
   body
     #nav
     #root-container.container
       #root
+
+    ins.adsbygoogle(style='display:block', data-ad-client='ca-pub-4342286684165248', data-ad-slot='8306339708', data-ad-format='auto', data-full-width-responsive='true')
 
     hr
 
