place ad in container

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -21,8 +21,9 @@ html(lang='en')
     #nav
     #root-container.container
       #root
-
-    ins.adsbygoogle(style='display:block', data-ad-client='ca-pub-4342286684165248', data-ad-slot='8306339708', data-ad-format='auto', data-full-width-responsive='true')
+    
+    .container
+      ins.adsbygoogle(style='display:block', data-ad-client='ca-pub-4342286684165248', data-ad-slot='8306339708', data-ad-format='auto', data-full-width-responsive='true')
 
     hr
 
