--- a/src/css/style.less
+++ b/src/css/style.less
@@ -58,7 +58,8 @@ nav{
 	li {
 		width: 33.33%;
 		white-space: nowrap;
-
+		text-align: center;
+		padding: 0;
 		&:hover{
 			color: rgb(189, 189, 189);
 		}
