--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -3,7 +3,8 @@ html(lang='en')
     title Budget Calculator
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='shortcut icon', type='image/png', href='asset/favicon.png')
+    link(rel='shortcut icon', type='image/x-icon', href='asset/favicon.ico')
+    link(rel='icon', type='image/x-icon', href='asset/favicon.ico')
     link(rel='stylesheet', type='text/css', href='css/style.css')
     script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js', integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q', crossorigin='anonymous')
