--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -3,7 +3,7 @@ html(lang='en')
     title Budget Calculator
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='icon', type='image/png', href='asset/android-icon-192x192.png')
+    link(rel='icon', type='image/png', sizes="192x192", href='asset/android-icon-192x192.png')
     link(rel='shortcut icon', type='image/x-icon', href='asset/favicon.ico')
     link(rel='icon', type='image/x-icon', href='asset/favicon.ico')
     link(rel='stylesheet', type='text/css', href='css/style.css')
